--- a/Pages/My_Work_Nl.html
+++ b/Pages/My_Work_Nl.html
@@ -15,7 +15,6 @@
 
 </head>
 <body class="bodyMyWork">
-
   <div class="header-my-work">
 <a href="indexNL.html" class="logo">
     <img src="../img/Logo.png" alt="">
@@ -88,6 +87,15 @@
             </div>
           </div>
         
+
+
+          <div class="grid-block">
+            <div class="tile">
+              <a class="tile-link" href="../Pages/pong_game_nl.html">
+                <img class="tile-img tile-img5" src="../img/pongGame.png" alt="Image">
+              </a>
+            </div>
+          </div>
         
       </div>
 
