--- a/Pages/todo_app_nl.html
+++ b/Pages/todo_app_nl.html
@@ -37,7 +37,7 @@
   
 <div class="dropdown">
     <button type="button" class="btn btn-primary dropdown-toggle" style="background-color: red; position: fixed;" data-toggle="dropdown">
-      Language
+      Taal
     </button>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="todo_app.html" >EN</a>
