--- a/Pages/My_Work_Nl.html
+++ b/Pages/My_Work_Nl.html
@@ -96,7 +96,17 @@
               </a>
             </div>
           </div>
-        
+
+
+          
+          <div class="grid-block">
+            <div class="tile">
+              <a class="tile-link" href="../Pages/piano_madness_nl.html">
+                <img class="tile-img tile-img5" src="../img/Piano.png" alt="Image">
+              </a>
+            </div>
+          </div>
+
       </div>
 
   
