--- a/Pages/pong_game_nl.html
+++ b/Pages/pong_game_nl.html
@@ -48,6 +48,9 @@
         In dit project heb ik een pongspel ontwikkeld. Het was mijn eerste game die ik maakte in unity. Het was niet zo moeilijk, maar was wel erg leuk. De bedoeling was om kennis te maken met eenheid en te zien hoe het werkt.</h2>
 </div>
 
+
+<button style="margin-left: 50%; margin-bottom: 10%;"><a  href="../Games/Pong Game/index.html"><span> PLAY</span></a></button>
+
   <div class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nYRCxVkLZO4 "></iframe>
   </div>
